<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    tools:context=".Sign_up_Activity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



        <TextView
            android:id="@+id/txtHi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:paddingTop="70dp"
            android:textStyle="bold"
            android:paddingStart="50sp"
            android:paddingEnd="50sp"


            />
        <TextView
            android:id="@+id/txtHi2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtHi"
            android:text="@string/create_a_new_account"
            android:layout_marginStart="50sp"
            android:layout_marginEnd="50sp"
            android:textSize="15sp"
            android:layout_marginTop="10sp"
            />


    </RelativeLayout>

    <EditText
        android:id="@+id/edtNewName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/edtNewMail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/edtNewPass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:inputType="textPassword"
        />
    <Button android:id="@+id/btnSignUp2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:text="@string/sign_up_btn"
        android:textColor="@color/white"
        android:backgroundTint="#FF42A5F5"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="15sp"
        android:paddingTop="20sp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/social_media_signup"
        android:textSize="15sp"
        android:paddingTop="20sp"
        android:layout_gravity="center"/>
    <RelativeLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp">

        <ImageView
            android:id="@+id/imgGgl"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:src="@drawable/ggl"/>
        <ImageView
            android:id="@+id/imgFb"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/fb"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_alignStart="@+id/imgGgl"
            android:layout_alignLeft="@+id/imgGgl"/>

        <ImageView
            android:id="@+id/imgLinkdin"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:src="@drawable/li"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_alignStart="@+id/imgFb"
            android:layout_alignLeft="@+id/imgFb"
            />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView

            android:id="@+id/txtAlready_Have"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/already_have_an_accound"
            android:layout_marginLeft="100sp"
            android:layout_marginStart="100sp" />

        <TextView
            android:id="@+id/txtLoginlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_btn_txt"
            android:layout_toRightOf="@+id/txtAlready_Have"
            android:layout_marginLeft="10sp"
            android:clickable="true"
            android:textColor="#FF008DFF"
            android:layout_toEndOf="@+id/txtAlready_Have"
            android:layout_marginStart="10sp"
            android:focusable="true" />

    </RelativeLayout>


</LinearLayout>