<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtLoginWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="70dp"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_marginStart="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtLoginWelcome"
                android:layout_marginStart="30sp"
                android:layout_marginLeft="30sp"
                android:text="@string/log_in_to_continue"
                android:textSize="15sp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/edtUserNameLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:hint="@string/enter_username"
            android:layout_marginStart="30dp" />

        <EditText
            android:id="@+id/edtPasswordLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:layout_marginStart="30dp" />

        <Button
            android:id="@+id/btnLogin2"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF42A5F5"
            android:text="@string/log_in"
            android:textColor="@color/btn_text_color"/>

        <TextView
            android:id="@+id/txtForgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="20sp"
            android:text="@string/forget_password"
            android:clickable="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/or" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:text="@string/social_media_signup"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imgGgl"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:src="@drawable/ggl"
                />
            <ImageView
                android:id="@+id/imgFb"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/fb"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_alignStart="@+id/imgGgl"
                android:layout_alignLeft="@+id/imgGgl"/>

            <ImageView
                android:id="@+id/imgLinkdin"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/li"
                android:layout_marginStart="70dp"
                android:layout_marginLeft="70dp"
                android:layout_alignStart="@+id/imgFb"
                android:layout_alignLeft="@+id/imgFb"
                />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView

                android:id="@+id/txtAlready_Have"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/want_to_create_account"
                android:layout_marginLeft="70sp"
                android:layout_marginStart="70sp" />

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_up"
                android:layout_toRightOf="@+id/txtAlready_Have"
                android:layout_marginLeft="10sp"
                android:clickable="true"
                android:textColor="#FF008DFF"
                android:layout_marginStart="10sp"
                android:focusable="true" />

        </RelativeLayout>
</LinearLayout>
